feat: 금칙어 조회 isUsed 추가